# programming-challenges

./: README.md  tomato-pie.sh
001/: fizzbuzz  fizzbuzz.cpp
002/: binary.cpp
003/: BMI  BMI.cpp
004/: Quine  Quine.cpp
005/: anagram  anagram.cpp
006/: palindrome  palindrome.cpp
007/: factorial  factorial.cpp
008/: from10toB.cpp  fromBto10.cpp
009/: CF  CF.cpp  FC  FC.cpp
010/: ROT13  ROT13.cpp
012/: NQueens.cpp
013/L7/: AddWindow.cpp  AddWindow.h  CMakeLists.txt  Controller.cpp  Controller.h  MainWindow.cpp  MainWindow.h  Movie.h  Repository.cpp  Repository.h  main.cpp  mov.csv  mov.html
014/: tomato-pie.sh
015/databeis/: pom.xml
015/databeis/src/main/java/: CrudRepository.java  Database.java  Employee.java  Main.java  Person.java  PersonController.java  PersonControllerTest.java  PersonFileRepository.java  PersonInDatabaseRepository.java  PersonInMemoryRepository.java  UI.java  persons.txt
016/Pacman/src/: GraphicUI.java  Main.java  MyRunnable.java  Repository.java
017/Bloc/src/bloc/: Controller.java  Main.java  Repository.java  RepositoryTest.java  TerminalUI.java  UI.java
018/FarthestNeighbour/: SAT Report 2013-2014.csv  bmw.csv  main.py
019/: Main  MainL1  MainL2  MainS1  MainS2  makefile  minilang.cup  minilang.jflex
